crates/swc_ecma_react_compiler/tests/fixtures/upstream/preserve-memo-validation/error.todo-useCallback-captures-invalidating-value/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This value was memoized in source but not in compilation output.

error.todo-useCallback-captures-invalidating-value.ts:13:21
  11 |   x.push(props);
  12 |
> 13 |   return useCallback(() => [x], [x]);
     |                      ^^^^^^^^^ Could not preserve existing memoization
  14 | }
  15 |
  16 | export const FIXTURE_ENTRYPOINT = {
